refactor: Studio 목록(전체, 검색결과) 조회 시, 스크랩 여부 확인 로직 개선
* Studio 목록 조회 시 반복되는 스크랩 여부 단건 쿼리를 벌크 IN 쿼리로 변경